# ethglobal

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  slides.md
.github/workflows/: deploy.yml
back/: Cargo.toml  README.md  diesel.toml  docker-compose.yml
back/contracts/: proover.json  verifyer.json
back/migrations/: 001_create_checkpoint.sql
back/migrations/2024-05-01-000000_create_users/: up.sql
back/migrations/2024-05-02-000000_add_github_fields_to_users/: down.sql
back/src/: checkpoint.rs  main.rs
back/src/api/models/: user.rs
back/src/api/repository/: user_repository.rs
back/src/api/routes/: mod.rs  oauth_routes.rs  user_routes.rs
back/src/api/service/: oauth_service.rs  user_service.rs
back/src/github/: bot.rs  error.rs  mod.rs  tempales.rs  templates.rs
back/src/github/template/: close_issue.rs  mod.rs  new_pull_request.rs  open_issue.rs
back/src/pollers/: github.rs  issues.rs  mod.rs  solidity.rs
back/src/pollers/chain/: events.rs  mod.rs  solidity.rs
back/src/verifyer/: mod.rs  proof.rs  verifyer.rs
back/templates/: close_issue.tera  increase_deadline.tera  new_pull_request.tera  open_issue.tera
documentation/potential-upgrade/: fund-on-merge-approval.md
ethglobal-bruno/: bruno.json
frontend/: .prettierignore  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.tsx  errors.ts  index.css  main.tsx
frontend/src/components/: ExtensionButton.tsx  Layout.tsx  Navbar.tsx  mode-toggle.tsx
oauth/: .env  .env.example  .gitignore  Cargo.toml  docker-compose.yml
oauth/src/: main.rs
(+32 files in other folders)
