[package]
name = "vGrant-data-poller"
version = "0.1.0"
edition = "2024"

[features]
default = ["api"]
api = []
polling = []

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1"
octocrab = "*"
regex = "*"
futures = "*"
rand = "0.8.5"
tera = "*"
alloy = "1"
url = "*"
sqlx = { version = "0.8.6", features = ["postgres"] }
# [toolchain]
# channel = "stable"
# components = ["rust-src", "rustfmt", "clippy"]
